# task-mngr

task-manager/: .env  .gitignore  README.md  pyproject.toml  task_manager.db
task-manager/app/: main.py
task-manager/app/api/: deps.py
task-manager/app/api/v1/: api.py
task-manager/app/api/v1/endpoints/: auth.py  tasks.py  users.py
task-manager/app/core/: config.py
task-manager/app/core/auth/: __init__.py  jwt.py  password.py
task-manager/app/database/: session.py
task-manager/app/models/: enums.py  task.py  user.py
task-manager/app/schemas/: task.py  user.py
task-manager/app/services/: task_service.py  user_service.py
